--- a/src/containers/Layout/Main/Contact/Contact.module.scss
+++ b/src/containers/Layout/Main/Contact/Contact.module.scss
@@ -1,4 +1,40 @@
 .Contact {
   background-color: var(--soft-blue);
   padding: 10rem 0;
+
+  &Box {
+    width: 35%;
+    margin: 0 auto;
+    color: white;
+
+    & p {
+      text-align: center;
+      margin-bottom: 2rem;
+      letter-spacing: 0.3rem;
+    }
+
+    & h2 {
+      font-size: 3rem;
+      text-align: center;
+      font-weight: 500;
+      margin-bottom: 4rem;
+      padding: 0 1rem;
+    }
+  }
+
+  &Form {
+    display: flex;
+  }
+
+  &Input {
+    padding: 1.5rem;
+    border-radius: 1rem;
+    flex: 1;
+    margin-right: 2rem;
+    border: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
