--- a/src/containers/Layout/Footer/Footer.module.scss
+++ b/src/containers/Layout/Footer/Footer.module.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .Footer {
   background-color: var(--very-dark-blue);
 
@@ -5,16 +7,31 @@
     padding: 4rem 0;
     display: flex;
     align-items: center;
+
+    @include respond(phone) {
+      flex-flow: column;
+      padding: 8rem 0;
+    }
   }
 
   &Icon {
     margin-left: auto;
+
+    @include respond(phone) {
+      margin-left: 0;
+      margin-top: 10rem;
+    }
 
     & svg {
       fill: white;
       height: 3rem;
       width: 3rem;
       cursor: pointer;
+
+      @include respond(phone) {
+        height: 6rem;
+        width: 6rem;
+      }
 
       &:not(:last-child) {
         margin-right: 4rem;
