--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,12 +1,23 @@
+@import '../../variables';
+
 .Heading {
   text-align: center;
   margin-bottom: 5rem;
+
+  @include respond(phone) {
+    margin-bottom: 10rem;
+  }
 
   & h2 {
     font-weight: 500;
     font-size: 3rem;
     color: var(--very-dark-blue);
     margin-bottom: 2rem;
+
+    @include respond(phone) {
+      margin-bottom: 4rem;
+      font-size: 5rem;
+    }
   }
 
   & p {
@@ -14,5 +25,9 @@
     text-align: center;
     margin: 0 auto;
     color: var(--grayish-blue);
+
+    @include respond(phone) {
+      width: 100%;
+    }
   }
 }
