--- a/src/containers/Layout/Main/FAQs/FAQs.module.scss
+++ b/src/containers/Layout/Main/FAQs/FAQs.module.scss
@@ -1,17 +1,27 @@
+@import '../../../../variables';
+
 .FAQs {
   margin-bottom: 10rem;
   text-align: center;
+
+  @include respond(phone) {
+    margin-bottom: 20rem;
+  }
 
   &List {
     width: 60%;
     margin: 0 auto;
     margin-bottom: 5rem;
     border-top: 1px solid var(--grayish-blue);
+
+    @include respond(phone) {
+      margin-bottom: 10rem;
+      width: 100%;
+    }
   }
 
   &Item {
     border-bottom: 1px solid var(--grayish-blue);
-    padding-bottom: 2rem;
   }
 
   &Quest {
@@ -24,16 +34,28 @@
     background-color: #ffffff;
     border: none;
 
+    @include respond(phone) {
+      padding: 3rem 0;
+    }
+
     & h3 {
-      font-size: 1.8rem;
       font-weight: 500;
       font-family: inherit;
       color: var(--very-dark-blue);
+
+      @include respond(phone) {
+        font-size: 2.8rem;
+      }
     }
 
     & svg {
       height: 3rem;
       width: 3rem;
+
+      @include respond(phone) {
+        height: 5rem;
+        width: 5rem;
+      }
     }
 
     &:hover h3 {
@@ -48,6 +70,11 @@
   &Ans {
     text-align: left;
     padding: 2rem 0;
+
+    @include respond(phone) {
+      font-size: 2.8rem;
+      padding: 4rem 0;
+    }
 
     &hide {
       display: none;
