--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -2,18 +2,30 @@
 
 .Tab {
   height: 50rem;
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 
+  & > * {
+    flex: 1;
+
+    @include respond(phone) {
+      flex: none;
+    }
+  }
+
   @include respond(phone) {
     height: auto;
+    flex-flow: column;
   }
 
   &right {
     display: flex;
     justify-content: flex-start;
+
+    @include respond(phone) {
+      justify-content: center;
+    }
 
     &Con {
       display: flex;
@@ -21,32 +33,35 @@
       justify-content: center;
       align-items: flex-start;
       padding-left: 10rem;
+      width: 80%;
+
+      @include respond(phone) {
+        align-items: center;
+        padding-left: 0;
+      }
 
       & h2 {
         font-size: 3rem;
         font-weight: 500;
         color: var(--very-dark-blue);
         margin-bottom: 3rem;
+
+        @include respond(phone) {
+          text-align: center;
+          font-size: 5rem;
+        }
       }
 
       & p {
         margin-bottom: 3rem;
         color: var(--grayish-blue);
+
+        @include respond(phone) {
+          text-align: center;
+          margin-bottom: 6rem;
+          font-size: 3.2rem;
+        }
       }
-    }
-  }
-
-  &Item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    @include respond(phone) {
-      flex-flow: column;
-    }
-
-    & > * {
-      flex: 1;
     }
   }
 
@@ -54,6 +69,18 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    position: relative;
+    height: 100%;
+
+    @include respond(phone) {
+      justify-content: center;
+      margin-bottom: 10rem;
+      height: 50rem;
+    }
+
+    &Con {
+      flex: 0 0 80%;
+    }
 
     & img {
       width: 100%;
@@ -65,7 +92,7 @@
     bottom: 0;
     left: 0;
     height: 70%;
-    width: 43%;
+    width: 80%;
     background-color: var(--soft-blue);
     z-index: -1;
     border-top-right-radius: 35%;
