--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -59,7 +59,7 @@
         @include respond(phone) {
           text-align: center;
           margin-bottom: 6rem;
-          font-size: 3.2rem;
+          width: 100%;
         }
       }
     }
