--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   -webkit-tap-highlight-color: transparent;
+  position: relative;
 
   @include respond(phone) {
     font-size: 3.6rem;
