--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,14 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
 
+  @include respond(mid) {
+    font-size: 50%;
+  }
+
+  @include respond(sm) {
+    font-size: 40%;
+  }
+
   @include respond(phone) {
     font-size: 30%;
   }
